@@ -29,6 +29,8 @@ PHP                                                                        NEWS
 - Fixed bug #48693 (Double declaration of __lambda_func when lambda wrongly
   formatted). (peter at lvp-media dot com, Felipe)
 - Fixed bug #48661 (phpize is broken with non-bash shells). (Jani)
+- Fixed bug #48637 ("file" fopen wrapper is overwritten when using
+  --with-curlwrappers). (Jani)
 - Fixed bug #48636 (Error compiling of ext/date on netware). (guenter at
   php.net, Ilia)
 - Fixed bug #48629 (get_defined_constants() ignores categorize parameter).
